# pydantic-discriminator

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini  tox.ini
examples/: example_1_broken.py  example_2_unions.py  example_3_pydantic-discriminator.py
pydantic_discriminator/: __init__.py  base_v1.py  base_v2.py  common.py
tests/: conftest.py  test_base.py
